// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page: Dashboard tests should correctly render page when user is not verified 1`] = `
<Page
  empty={Object {}}
  title="Dashboard"
>
  <SignupModal />
  <FreePlanWarningBanner
    account={
      Object {
        "created": 2018-05-15T12:00:00.000Z,
        "status": "active",
        "subscription": Object {
          "code": "paid",
        },
      }
    }
    accountAgeInDays={15}
    ageRangeStart={16}
  />
  <SuppressionBanner
    accountAgeInWeeks={0}
    hasSuppressions={true}
  />
  <GettingStartedGuide
    account={
      Object {
        "created": 2018-05-15T12:00:00.000Z,
        "status": "active",
        "subscription": Object {
          "code": "paid",
        },
      }
    }
    accountAgeInDays={15}
    accountAgeInWeeks={0}
    checkSuppression={[MockFunction]}
    currentUser={
      Object {
        "email_verfied": false,
      }
    }
    hasSuppressions={true}
    isMessageOnboardingSet={false}
    listApiKeys={[MockFunction]}
    listSendingDomains={[MockFunction]}
    moveGuideAtBottom={[MockFunction]}
    onboarding={Object {}}
    updateAccount={[MockFunction]}
    verifyingEmail={false}
  />
  <Connect(UsageReport) />
</Page>
`;

exports[`Page: Dashboard tests should display upgrade CTA when account is free and active 1`] = `
<Page
  empty={Object {}}
  title="Dashboard"
>
  <SignupModal />
  <FreePlanWarningBanner
    account={
      Object {
        "status": "active",
        "subscription": Object {
          "code": "free",
        },
      }
    }
    accountAgeInDays={15}
    ageRangeStart={16}
  />
  <SuppressionBanner
    accountAgeInWeeks={0}
    hasSuppressions={true}
  />
  <GettingStartedGuide
    account={
      Object {
        "status": "active",
        "subscription": Object {
          "code": "free",
        },
      }
    }
    accountAgeInDays={15}
    accountAgeInWeeks={0}
    checkSuppression={[MockFunction]}
    currentUser={
      Object {
        "email_verified": true,
      }
    }
    hasSuppressions={true}
    isMessageOnboardingSet={false}
    listApiKeys={[MockFunction]}
    listSendingDomains={[MockFunction]}
    moveGuideAtBottom={[MockFunction]}
    onboarding={Object {}}
    updateAccount={[MockFunction]}
    verifyingEmail={false}
  />
  <Connect(UsageReport) />
</Page>
`;

exports[`Page: Dashboard tests should render import suppression list when 0 suppressions and new account 1`] = `
<Page
  empty={Object {}}
  title="Dashboard"
>
  <SignupModal />
  <FreePlanWarningBanner
    account={
      Object {
        "created": 2018-05-15T12:00:00.000Z,
        "status": "active",
        "subscription": Object {
          "code": "paid",
        },
      }
    }
    accountAgeInDays={15}
    ageRangeStart={16}
  />
  <SuppressionBanner
    accountAgeInWeeks={40}
    hasSuppressions={false}
  />
  <GettingStartedGuide
    account={
      Object {
        "created": 2018-05-15T12:00:00.000Z,
        "status": "active",
        "subscription": Object {
          "code": "paid",
        },
      }
    }
    accountAgeInDays={15}
    accountAgeInWeeks={40}
    checkSuppression={[MockFunction]}
    currentUser={
      Object {
        "email_verified": true,
      }
    }
    hasSuppressions={false}
    isMessageOnboardingSet={false}
    listApiKeys={[MockFunction]}
    listSendingDomains={[MockFunction]}
    moveGuideAtBottom={[MockFunction]}
    onboarding={Object {}}
    updateAccount={[MockFunction]}
    verifyingEmail={false}
  />
  <Connect(UsageReport) />
</Page>
`;

exports[`Page: Dashboard tests should render page correctly with defaults 1`] = `
<Page
  empty={Object {}}
  title="Dashboard"
>
  <SignupModal />
  <FreePlanWarningBanner
    account={
      Object {
        "created": 2018-05-15T12:00:00.000Z,
        "status": "active",
        "subscription": Object {
          "code": "paid",
        },
      }
    }
    accountAgeInDays={15}
    ageRangeStart={16}
  />
  <SuppressionBanner
    accountAgeInWeeks={0}
    hasSuppressions={true}
  />
  <GettingStartedGuide
    account={
      Object {
        "created": 2018-05-15T12:00:00.000Z,
        "status": "active",
        "subscription": Object {
          "code": "paid",
        },
      }
    }
    accountAgeInDays={15}
    accountAgeInWeeks={0}
    checkSuppression={[MockFunction]}
    currentUser={
      Object {
        "email_verified": true,
      }
    }
    hasSuppressions={true}
    isMessageOnboardingSet={false}
    listApiKeys={[MockFunction]}
    listSendingDomains={[MockFunction]}
    moveGuideAtBottom={[MockFunction]}
    onboarding={Object {}}
    updateAccount={[MockFunction]}
    verifyingEmail={false}
  />
  <Connect(UsageReport) />
</Page>
`;
